syntax = "proto3";

package entity;

import "entity/role.proto";
import "google/protobuf/timestamp.proto";

message User {
    string uuid = 1;
    int32 hexes = 2;
    string last_username = 3;
    google.protobuf.Timestamp last_seen = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
    repeated entity.Role roles = 7;
}

