syntax = "proto2";

package protocol;

service Player {
    rpc RetrieveData (PlayerDataRequest) returns (PlayerDataReply);
}

message PlayerDataRequest {
    oneof id {
        datatype.Uuid uuid = 1;
        datatype.Username username =2;
    }
}

message PlayerDataReply {
    required entity.Player player = 1;
}
